--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -57,7 +57,8 @@
 .section h2 {
   font-size: 24px;
   margin-bottom: 15px;
-  color: #333;
+  color: #2977c9;
+  text-align: left;
 }
 
 .project-item,
@@ -75,7 +76,7 @@
 .company-item h3,
 .education-item h3 {
   font-size: 20px;
-  color: #2977c9;
+  color: #378fe9;
   margin: 5px 0;
 }
 
