--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,10 @@
 @media screen and (min-width: 786px) {
   .home-page-wrapper {
-    background-color: grey;
+    background: linear-gradient(
+      135deg,
+      rgba(147, 152, 180, 0.8),
+      rgba(206, 94, 131, 0.8)
+    );
   }
 }
 
