--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -47,3 +47,15 @@ body {
   min-height: 100vh;
   padding-bottom: 60px; /* Add padding-bottom instead of margin-bottom */
 }
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  margin: 0 10px;
+  transition: color 0.3s;
+}
+
+nav a:hover {
+  color: #f1f1f1;
+}
