--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Styles */
 footer {
-  background-color: #333;
+  background-color: #463838;
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -58,4 +58,19 @@ nav a {
 
 nav a:hover {
   color: #f1f1f1;
+}
+ 
+.left-links {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.right-links {
+  display: flex;
+  align-items: center;
+}
+
+.right-links li {
+  margin-left: 20px;
 }
